Compléter le projet

--- a/html/apprentissage.html
+++ b/html/apprentissage.html
@@ -49,11 +49,6 @@
                     <li>
                         <a href="#" class="navlink active">Apprentissage</a>
                     </li>
-                    <li>
-                        <a href="#">
-                            <img src="../images/night.png" alt="icon_night" width="45%" />
-                        </a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -75,13 +70,7 @@
                 Pour mener à bien la réalisation de ce site web personnel, il est essentiel d'acquérir les bases du HTML qui permet de structurer le contenu d'une page web, du CSS qui assure une mise en forme visuelle de manière claire et attrayante, ainsi que du JavaScript qui rend le site web interactif et dynamique.
                 Ces trois compétences constituent les fondations indispensables du développement web et permettent de transformer une simple idée en un site complet et fonctionnel.
                 <br><br>
-                Dans cette page, je vous présente ce que j’ai appris tout au long du cours d’HTML et de CSS, ainsi que les connaissances et compétences que j’ai développées à travers la conception de ce projet de portfolio.
-                <br><br>
-                Cette page se compose deux parties principales:
-                <ul>
-                    <li><a href="#coursR303"><b>Les connaissances apprises du cours R3.03</b></a></li>
-                    <li><a href="#portfolioR303"><b>Les compétences acquises de la conception du portfolio</b></a></li>
-                </ul>
+                Dans cette page, je vous présente ce que j’ai appris tout au long du cours R3.03 - HTML/CSS, JavaScript.
             </p>
         </div>
     </div>
@@ -694,31 +683,6 @@
                     </div>
                 </div>
             </div>     
-        </div>
-    </div>
-
-    <!-- DU PORTFOLIO -->
-    <div id="portfolioR303" class="section portfolio">
-        <div class="container">
-            <div class="titre">Compétences acquises de la conception du portfolio</div>
-            <div class="portfolio__contenu">
-                <!-- Partie HTML -->
-                <div class="portfolio__partie portfolio__html">
-                    <h2 class="partie__titre">i. html</h2>
-                </div>
-                <!-- Partie CSS -->
-                <div class="portfolio__partie portfolio__css">
-                    <h2 class="partie__titre">ii. css</h2>
-                </div>
-                <!-- Partie JavaScript -->
-                <div class="portfolio__partie portfolio__js">
-                    <h2 class="partie__titre">iii. javascript</h2>
-                </div>
-                <!-- Autre partie -->
-                <div class="portfolio__partie portfolio__autre">
-                    <h2 class="partie__titre">iv. autres</h2>
-                </div>
-            </div>
         </div>
     </div>
 
